--- a/proj.win32/HuaRongDaoTest.vcxproj
+++ b/proj.win32/HuaRongDaoTest.vcxproj
@@ -136,13 +136,16 @@ xcopy "$(ProjectDir)..\Resources" "$(OutDir)" /D /E /I /F /Y
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\Classes\AppDelegate.cpp" />
+    <ClCompile Include="..\Classes\Data\Levels.cpp" />
+    <ClCompile Include="..\Classes\Data\Roles.cpp" />
     <ClCompile Include="..\Classes\HelloWorldScene.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Classes\AppDelegate.h" />
+    <ClInclude Include="..\Classes\Data\Roles.h" />
     <ClInclude Include="..\Classes\HelloWorldScene.h" />
-    <ClInclude Include="..\Classes\Level.h" />
+    <ClInclude Include="..\Classes\Levels.h" />
     <ClInclude Include="main.h" />
   </ItemGroup>
   <ItemGroup>
